# gftools

./: .gitignore  .gitmodules  .travis.yml  CLAUDE.md  Cargo.toml  MANIFEST.in  README.md  add_font.py  browsers2.sketch.py  dump_names.py  find_features.py  font_diff.py  font_weights_coverage.py  gftools-builder.spec  gftools-qa.spec  gftools.spec  jfont.py  namelist.py  push_sketch.py  pyproject.toml  qa.sketch.py  requirements.txt  sanity_check.py  setup.py  space_check.py  test_gf_coverage.py  ttf2cp.py  update_data.sh  update_reg.sh  varfont_info.py
.github/workflows/: publish-release.yml  render-text.yml  test.yml
Lib/gftools/: addfont.py  argparse.py  article.py  axes.proto  axes_pb2.py  axisreg.py  constants.py  designers_pb2.py  fix.py  fonts_public.proto  fonts_public_pb2.py  fontsetter.py  gfargparse.py  gfgithub.py  gflogging.py  github.py  greendot.py  html.py  instancer.py  knowledge.proto  knowledge_pb2.py  lang.proto  lang_pb2.py  logging.py  meta.py  packager.py  push.py  push2.py  qa.py  stat.py  subsetmerger.py  tags.py  template.upstream.yaml  ufomerge.py  utils.py
Lib/gftools/actions/: __init__.py  checkgooglefonts.py  checkversionbump.py  getlatestversion.py  notobuilder.py  qa2issue.py  updateupstream.py
Lib/gftools/axisregistry/: casual.textproto  cursive.textproto  fill.textproto  grade.textproto  italic.textproto  monospace.textproto  optical_size.textproto  slant.textproto  softness.textproto  weight.textproto  width.textproto  wonky.textproto
Lib/gftools/builder/: __init__.py  __main__.py  _ninja.py  autohint.py  build_vtt.py  cache.py  dependencies.py  file.py  fontc.py  gen_stat.py  ninja.py  schema.py
Lib/gftools/builder/jobrunner/: __main__.py
Lib/gftools/builder/operations/: __init__.py  addChws.py  addSpacingAxis.py  addSubset.py  autohint.py  autohintOTF.py  avar2ToAvar1.py  buildAvar2.py  buildFvarInstances.py  buildOTF.py  buildStat.py  buildTTF.py  buildVTT.py  buildVariable.py  compress.py  copy.py  exec.py  featureFreeze.py  fix.py  fontsetter.py  (+9 more)
Lib/gftools/diffenator/: __init__.py  ft_hb_shape.py  fuzzer.py  glyphs.py  jfont.py  scale.py
Lib/gftools/encodings/: README.md  adlam_unique-glyphs.nam  ahom_unique-glyphs.nam  anatolian-hieroglyphs_unique-glyphs.nam  arabic_unique-glyphs.nam  armenian_unique-glyphs.nam  avestan_unique-glyphs.nam  balinese_unique-glyphs.nam  bamum_unique-glyphs.nam  bassa-vah_unique-glyphs.nam  batak_unique-glyphs.nam  bengali_unique-glyphs.nam  bhaiksuki_unique-glyphs.nam  brahmi_unique-glyphs.nam  buginese_unique-glyphs.nam  buhid_unique-glyphs.nam  canadian-aboriginal_unique-glyphs.nam  carian_unique-glyphs.nam  caucasian-albanian_unique-glyphs.nam  chakma_unique-glyphs.nam  cham_unique-glyphs.nam  cherokee_unique-glyphs.nam  chinese-hongkong_unique-glyphs.nam  chinese-simplified_unique-glyphs.nam  chinese-traditional_unique-glyphs.nam  coptic_unique-glyphs.nam  cuneiform_unique-glyphs.nam  cypriot_unique-glyphs.nam  cyrillic-ext_unique-glyphs.nam  cyrillic_unique-glyphs.nam  deseret_unique-glyphs.nam  devanagari_unique-glyphs.nam  dogra_unique-glyphs.nam  duployan_unique-glyphs.nam  egyptian-hieroglyphs_unique-glyphs.nam  elbasan_unique-glyphs.nam  elymaic_unique-glyphs.nam  emoji_unique-glyphs.nam  ethiopic_unique-glyphs.nam  georgian_unique-glyphs.nam  (+121 more)
Lib/gftools/fix/: __init__.py
Lib/gftools/packager/: __init__.py  build.py  constants.py  exceptions.py  git.py  interaction.py  upstream.py
Lib/gftools/push/: items.py  servers.py  trafficjam.py  utils.py
Lib/gftools/push-templates/: index.html
Lib/gftools/render_text/: __init__.py  coretext_backend.py  directwrite_backend.py  freetype_backend.py
Lib/gftools/scripts/: __init__.py  add_axis.py  add_designer.py  add_ds_subsets.py  add_font.py  add_tags.py  autohint.py  avar2_to_avar1.py  batch_packager.py  build_ofl.py  check_bbox.py  check_category.py  check_copyright_notices.py  check_font_version.py  check_name.py  check_sandbox_family.py  check_vertical_extents.py  check_vtt_compatibility.py  check_vtt_compile.py  cldr.py  compare_font.py  compare_meta.py  drop_hints.py  family_html_snippet.py  find_features.py  fix_article.py  fix_ascii_fontmetadata.py  fix_cmap.py  fix_family.py  fix_familymetadata.py  fix_font.py  fix_fsselection.py  fix_fstype.py  fix_gasp.py  fix_glyph_private_encoding.py  fix_glyphs.py  fix_hinting.py  fix_instances.py  fix_isfixedpitch.py  fix_media.py  (+66 more)
Lib/gftools/spec/: __init__.py  font.py
Lib/gftools/tag-templates/: index.html
Lib/gftools/templates/: _base.html  base.html  family.html  glyphs.html  test.html  text.html  waterfall.html
Lib/gftools/tests/: builder_dependents.py  test_builder.py  test_combinator.py  test_fix.py  test_fix2.py  test_html.py  test_html_family.py  test_instancer.py  test_meta.py  test_qa.py  test_stat.py  test_usage.py
Lib/gftools/util/: filter_lists.py  glyphdata.py  google_fonts.py  py_subsets.py  styles.py  templates.py  udhr.py  unicode_sections.py
data/test/: Lora-Regular.ttf-old  Lora.glyphs  MavenPro.glyphs  builder_test.yaml  lora_stat.yaml
data/test/Libre-Bodoni/: AUTHORS.txt  CONTRIBUTORS.txt  FONTLOG.txt  README.md
data/test/MavenPro-Regular.ufo/: features.fea  fontinfo.plist  groups.plist  kerning.plist  lib.plist
data/test/article/: ARTICLE.en_us.html
data/test/builder/: test_family.glyphs
data/test/servers/: family.json  fonts.json
docs/: regen-docs.sh
docs/gftools-builder/: README.md
docs/gftools-gen-html/: README.md
docs/gftools-packager/: README.md
docs/gftools-render-text/: spec.md
encodings/GF Glyph Sets/: GF-latin-expert_unique-glyphs.nam  README.md
encodings/GF Glyph Sets/glyphTypeSorting/: EXPERT_composites_207.txt
src/: error.rs  lib.rs  names.rs  utils.rs
test/: run.sh
tests/: test_builder.py  test_dependencies.py  test_fix.py  test_fix_media.py  test_fontsetter.py  test_gfgithub.py  test_greendot.py  test_html.py  test_instancer.py  test_push.py  test_qa.py  test_subset_merger.py  test_tags.py  test_usage.py  test_utils.py
tests/push/: test_items.py  test_servers.py  test_trafficjam.py
util/: google_fonts.py
(+770 files in other folders)
