[package]
name = "gftools"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "gftools-add-axis"
path = "src/bin/add_axis.rs"

[[bin]]
name = "gftools-fix-font"
path = "src/bin/fix_font.rs"

[[bin]]
name = "gftools-list-italicangle"
path = "src/bin/list_italicangle.rs"


[[bin]]
name = "gftools-unicode-names"
path = "src/bin/unicode_names.rs"

[[bin]]
name = "gftools-rangify"
path = "src/bin/rangify.rs"

[[bin]]
name = "gftools-check-bbox"
path = "src/bin/check_bbox.rs"

[dependencies]
reqwest = { version = "0.12.15", features = ["blocking", "json"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
thiserror = "2.0.12"
scraper = "0.23.1"
chrono = { version = "0.4.40", features = ["serde"] }
log = "0.4.27"
toml = "0.8.20"
serde_json_path_to_error = "0.1.4"
clap = { version = "4.5.45", features = ["derive"] }
fontations = "0.3.0"
gf-metadata = "0.2.0"
protobuf = "3.7.2"
fontspector-hotfix = { version = "0.1.0", path = "../../hacks/typography/fontspector/fontspector-hotfix" }
env_logger = "0.11.8"
tabled = "0.20.0"
unicode_names2 = "2.0.0"


[dev-dependencies]
expanduser = "1.2.2"
env_logger = "0.11.8"
pretty_assertions = "1.4.1"
