[build-system]
requires = ["setuptools>=45", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "gftools"
description = "Google Fonts Tools is a set of command-line tools for testing font projects"
readme = "README.md"
dynamic = ["version"]
authors = [
  { name = "Marc Foley", email = "m.foley.88@gmail.com" },
  { name = "Dave Crossland", email = "dave@lab6.com" },
  { name = "Felipe Sanches" },
  { name = "Lasse Fister" },
  { name = "Eli Heuer" },
  { name = "Roderick Sheeter" },
  { name = "Simon Cozens", email = "simon@simon-cozens.org" }
]
classifiers = [
  'Environment :: Console',
  'Intended Audience :: Developers',
  'Topic :: Text Processing :: Fonts',
  'License :: OSI Approved :: Apache Software License',
  'Operating System :: OS Independent',
  'Programming Language :: Python :: 2',
  'Programming Language :: Python :: 3'
]
dependencies = [
  'setuptools',
  'FontTools[ufo]',
  'axisregistry>=0.3.1', # API update removed fallback names pre-processing
  'absl-py',
  'glyphsLib',
  'gflanguages>=0.4.0',
  'glyphsets>=0.2.1',
  'PyGithub',
  'pillow',
  # 3.7.0 fixed a bug on parsing some METADATA.pb files.
  # We cannot use v4 because our protobuf files have been compiled with v3.
  'protobuf>=3.7.0, <4',
  'requests',
  'tabulate',
  'unidecode',
  'opentype-sanitizer',
  'vttlib',
  'pygit2',
  'strictyaml',
  'fontmake>=3.3.0',
  'skia-pathops',
  'statmake',
  'PyYAML',
  'babelfont',
  'ttfautohint-py',
  'brotli',
  'browserstack-local==1.2.2',
  'pybrowserstack-screenshots==0.1',
  'jinja2',
  'hyperglot',
  'fontFeatures',
  'vharfbuzz',
  'bumpfontversion',
  'nanoemoji>=0.15.0',
]

[project.scripts]
gftools = "gftools.scripts:main"

[tool.setuptools.packages.find]
where = ["Lib"]

[tool.setuptools_scm]
